@@ -1,5 +1,6 @@
 - Improvement: Add support to setup credentials in CgdStudentPhotoClient constructor [FENIX-15817]
 - Bug Fix: CgdIntegrationService - NumberFormatException when student number not a number. (FENIX-15402) [ISCTE-FENIXEDU-637]
+- Bug Fix: Support student numbers with 6 digits [FENIX-15818]
 
 2.12.2 (28-08-2024)
 - Refactor:  Support to  multiple active calendars [#UL-FC-5116]
